--- a/src/component/Main/Main.css
+++ b/src/component/Main/Main.css
@@ -4,3 +4,15 @@
     
  
 }
+
+.data{
+    float: left;
+    position: relative;
+
+}
+
+.searchResult{
+    border: 2px solid black;
+    height: 50px;
+    width: inherit
+}
